package clientlib

import (
	"fmt"
	"net/url"
	"strings"
	teeproto "tee-mpc/proto"
	"tee-mpc/shared"
	"time"

	"go.uber.org/zap"

	"github.com/gorilla/websocket"
	"google.golang.org/protobuf/proto"
)

// ConnectToTEEK establishes WebSocket connection to TEE_K
func (c *Client) ConnectToTEEK() error {
	u, err := url.Parse(c.teekURL)
	if err != nil {
		return fmt.Errorf("failed to parse TEE_K URL: %v", err)
	}

	c.logger.Info("Attempting WebSocket connection to TEE_K",
		zap.String("url", c.teekURL))

	// Determine connection mode and use appropriate dialer
	var conn *websocket.Conn
	if strings.HasPrefix(c.teekURL, "wss://") && strings.Contains(c.teekURL, "reclaimprotocol.org") {
		// Enclave mode: use custom dialer with TLS config
		c.logger.Info("Enclave mode detected for TEE_K - using custom dialer")
		dialer := createEnclaveWebSocketDialer()
		conn, _, err = dialer.Dial(u.String(), nil)
	} else {
		// Standalone mode: use default dialer
		c.logger.Info("Standalone mode detected for TEE_K - using default dialer")
		conn, _, err = websocket.DefaultDialer.Dial(u.String(), nil)
	}

	if err != nil {
		c.logger.Error("WebSocket dial failed for TEE_K", zap.String("url", c.teekURL), zap.Error(err))
		return fmt.Errorf("failed to connect to TEE_K: %v", err)
	}

	c.wsConn = conn
	c.logger.Info("WebSocket connection to TEE_K established successfully")

	// Start message handling goroutine
	go c.handleMessages()

	return nil
}

// ConnectToTEET establishes WebSocket connection to TEE_T
func (c *Client) ConnectToTEET() error {
	u, err := url.Parse(c.teetURL)
	if err != nil {
		return fmt.Errorf("failed to parse TEE_T URL: %v", err)
	}

	c.logger.Info("Attempting WebSocket connection to TEE_T",
		zap.String("url", c.teetURL))

	// Determine connection mode and use appropriate dialer
	var conn *websocket.Conn
	if strings.HasPrefix(c.teetURL, "wss://") && strings.Contains(c.teetURL, "reclaimprotocol.org") {
		// Enclave mode: use custom dialer with TLS config
		c.logger.Info("Enclave mode detected for TEE_T - using custom dialer")
		dialer := createEnclaveWebSocketDialer()
		conn, _, err = dialer.Dial(u.String(), nil)
	} else {
		// Standalone mode: use default dialer
		c.logger.Info("Standalone mode detected for TEE_T - using default dialer")
		conn, _, err = websocket.DefaultDialer.Dial(u.String(), nil)
	}

	if err != nil {
		c.logger.Error("WebSocket dial failed for TEE_T", zap.String("url", c.teetURL), zap.Error(err))
		return fmt.Errorf("failed to connect to TEE_T: %v", err)
	}

	c.teetConn = conn
	c.logger.Info("WebSocket connection to TEE_T established successfully")

	// Start message handling goroutine for TEE_T
	go c.handleTEETMessages()

	return nil
}

// handleMessages handles incoming messages from TEE_K
func (c *Client) handleMessages() {
	for {
		conn := c.wsConn
		closing := c.isClosing

		if conn == nil {
			break
		}

		_, msgBytes, err := conn.ReadMessage()
		if err != nil {
			// Only log errors if we're not intentionally closing and it's not a normal shutdown condition
			if !closing {
				// Check for normal close conditions or network errors during shutdown
				if websocket.IsCloseError(err, websocket.CloseNormalClosure, websocket.CloseGoingAway, websocket.CloseAbnormalClosure) {
				} else if !isClientNetworkShutdownError(err) {
					c.logger.Error("Failed to read websocket message", zap.Error(err))
				}
			}
			break
		}

		var env teeproto.Envelope
		if err := proto.Unmarshal(msgBytes, &env); err != nil {
			if !closing {
				c.terminateConnectionWithError("Failed to parse message from TEE_K", err)
				return
			}
			break
		}

		switch p := env.Payload.(type) {
		case *teeproto.Envelope_ConnectionReady:
			msg := &shared.Message{Type: shared.MsgConnectionReady, SessionID: env.GetSessionId(), Data: shared.ConnectionReadyData{Success: p.ConnectionReady.GetSuccess()}, Timestamp: time.UnixMilli(env.GetTimestampMs())}
			c.handleConnectionReady(msg)
		case *teeproto.Envelope_TcpData:
			msg := &shared.Message{Type: shared.MsgSendTCPData, SessionID: env.GetSessionId(), Data: shared.TCPData{Data: p.TcpData.GetData()}, Timestamp: time.UnixMilli(env.GetTimestampMs())}
			c.handleSendTCPData(msg)
		case *teeproto.Envelope_HandshakeComplete:
			msg := &shared.Message{Type: shared.MsgHandshakeComplete, SessionID: env.GetSessionId(), Data: shared.HandshakeCompleteData{Success: p.HandshakeComplete.GetSuccess(), CertificateChain: p.HandshakeComplete.GetCertificateChain()}, Timestamp: time.UnixMilli(env.GetTimestampMs())}
			c.handleHandshakeComplete(msg)
		case *teeproto.Envelope_HandshakeKeyDisclosure:
			hd := p.HandshakeKeyDisclosure
			msg := &shared.Message{Type: shared.MsgHandshakeKeyDisclosure, SessionID: env.GetSessionId(), Data: shared.HandshakeKeyDisclosureData{HandshakeKey: hd.GetHandshakeKey(), HandshakeIV: hd.GetHandshakeIv(), CertificatePacket: hd.GetCertificatePacket(), CipherSuite: uint16(hd.GetCipherSuite()), Algorithm: hd.GetAlgorithm(), Success: hd.GetSuccess()}, Timestamp: time.UnixMilli(env.GetTimestampMs())}
			c.handleHandshakeKeyDisclosure(msg)
		case *teeproto.Envelope_HttpResponse:
			msg := &shared.Message{Type: shared.MsgHTTPResponse, SessionID: env.GetSessionId(), Data: shared.HTTPResponseData{Response: p.HttpResponse.GetResponse(), Success: p.HttpResponse.GetSuccess()}, Timestamp: time.UnixMilli(env.GetTimestampMs())}
			c.handleHTTPResponse(msg)
		case *teeproto.Envelope_SessionReady:
			msg := &shared.Message{Type: shared.MsgSessionReady, SessionID: env.GetSessionId(), Data: shared.SessionReadyData{SessionID: env.GetSessionId(), Ready: p.SessionReady.GetReady()}, Timestamp: time.UnixMilli(env.GetTimestampMs())}
			c.handleSessionReady(msg)
		case *teeproto.Envelope_Error:
			msg := &shared.Message{Type: shared.MsgError, SessionID: env.GetSessionId(), Data: shared.ErrorData{Message: p.Error.GetMessage()}, Timestamp: time.UnixMilli(env.GetTimestampMs())}
			c.handleError(msg)
		case *teeproto.Envelope_BatchedSignedRedactedDecryptionStreams:
			// Map to shared structure
			var arr []shared.SignedRedactedDecryptionStream
			for _, s := range p.BatchedSignedRedactedDecryptionStreams.GetSignedRedactedStreams() {
				arr = append(arr, shared.SignedRedactedDecryptionStream{RedactedStream: s.GetRedactedStream(), SeqNum: s.GetSeqNum()})
			}
			msg := &shared.Message{Type: shared.MsgBatchedSignedRedactedDecryptionStreams, SessionID: env.GetSessionId(), Data: shared.BatchedSignedRedactedDecryptionStreamData{SignedRedactedStreams: arr, SessionID: env.GetSessionId(), TotalCount: int(p.BatchedSignedRedactedDecryptionStreams.GetTotalCount())}, Timestamp: time.UnixMilli(env.GetTimestampMs())}
			c.handleBatchedSignedRedactedDecryptionStreams(msg)
		case *teeproto.Envelope_SignedMessage:
			// Handle SignedMessage from TEE_K (K_OUTPUT)
			sm := p.SignedMessage
			if sm == nil {
				break
			}
			if sm.GetBodyType() == teeproto.BodyType_BODY_TYPE_K_OUTPUT {
				// Store the original SignedMessage for verification bundle
				c.teekSignedMessage = sm

				var body teeproto.KOutputPayload
				if err := proto.Unmarshal(sm.GetBody(), &body); err != nil {
					c.logger.Error("Failed to unmarshal KOutputPayload", zap.Error(err))
					break
				}
				// Map redacted streams into client collection first
				for _, s := range body.GetRedactedStreams() {
					c.signedRedactedStreams = append(c.signedRedactedStreams, shared.SignedRedactedDecryptionStream{RedactedStream: s.GetRedactedStream(), SeqNum: s.GetSeqNum()})
				}
				// Build a shared.SignedTranscript compatible with existing client logic
				var reqRanges []shared.RequestRedactionRange
				for _, r := range body.GetRequestRedactionRanges() {
					reqRanges = append(reqRanges, shared.RequestRedactionRange{Start: int(r.GetStart()), Length: int(r.GetLength()), Type: r.GetType(), RedactionBytes: r.GetRedactionBytes()})
				}
				var respRanges []shared.ResponseRedactionRange
				for _, rr := range body.GetResponseRedactionRanges() {
					respRanges = append(respRanges, shared.ResponseRedactionRange{Start: int(rr.GetStart()), Length: int(rr.GetLength())})
				}
				st := shared.SignedTranscript{
					Packets: body.GetPackets(),
					RequestMetadata: &shared.RequestMetadata{
						RedactedRequest: body.GetRedactedRequest(),
						RedactionRanges: reqRanges,
					},
					ResponseRedactionRanges: respRanges,
					Signature:               sm.GetSignature(),
					PublicKey:               sm.GetPublicKey(),
				}
				c.processSignedTranscriptDataWithStreams(&st)
			}
		case *teeproto.Envelope_AttestationResponse:
			ar := p.AttestationResponse
			msg := &shared.Message{Type: shared.MsgAttestationResponse, SessionID: env.GetSessionId(), Data: shared.AttestationResponseData{AttestationDoc: ar.GetAttestationDoc(), Success: ar.GetSuccess(), ErrorMessage: ar.GetErrorMessage(), Source: ar.GetSource()}, Timestamp: time.UnixMilli(env.GetTimestampMs())}
			c.handleAttestationResponse(msg)
		case *teeproto.Envelope_BatchedTagVerifications:
			var ver []shared.ResponseTagVerificationData
			for _, v := range p.BatchedTagVerifications.GetVerifications() {
				ver = append(ver, shared.ResponseTagVerificationData{Success: v.GetSuccess(), SeqNum: v.GetSeqNum(), Message: v.GetMessage()})
			}
			msg := &shared.Message{Type: shared.MsgBatchedTagVerifications, SessionID: env.GetSessionId(), Data: shared.BatchedTagVerificationData{Verifications: ver, SessionID: p.BatchedTagVerifications.GetSessionId(), TotalCount: int(p.BatchedTagVerifications.GetTotalCount()), AllSuccessful: p.BatchedTagVerifications.GetAllSuccessful()}, Timestamp: time.UnixMilli(env.GetTimestampMs())}
			c.handleBatchedTagVerifications(msg)
		case *teeproto.Envelope_BatchedDecryptionStreams:
			var ds []shared.ResponseDecryptionStreamData
			for _, s := range p.BatchedDecryptionStreams.GetDecryptionStreams() {
				ds = append(ds, shared.ResponseDecryptionStreamData{DecryptionStream: s.GetDecryptionStream(), SeqNum: s.GetSeqNum(), Length: int(s.GetLength())})
			}
			msg := &shared.Message{Type: shared.MsgBatchedDecryptionStreams, SessionID: env.GetSessionId(), Data: shared.BatchedDecryptionStreamData{DecryptionStreams: ds, SessionID: p.BatchedDecryptionStreams.GetSessionId(), TotalCount: int(p.BatchedDecryptionStreams.GetTotalCount())}, Timestamp: time.UnixMilli(env.GetTimestampMs())}
			c.handleBatchedDecryptionStreams(msg)
		default:
			if !closing {
				c.logger.Error("Unknown message payload from TEE_K")
			}
		}
	}
}

// handleTEETMessages handles incoming messages from TEE_T
func (c *Client) handleTEETMessages() {
	for {
		conn := c.teetConn
		closing := c.isClosing

		if conn == nil {
			break
		}

		_, msgBytes, err := conn.ReadMessage()
		if err != nil {
			if !closing {
				if websocket.IsCloseError(err, websocket.CloseNormalClosure, websocket.CloseGoingAway, websocket.CloseAbnormalClosure) {
				} else if !isClientNetworkShutdownError(err) {
					c.logger.Error("Failed to read TEE_T websocket message", zap.Error(err))
				}
			}
			break
		}

		var env teeproto.Envelope
		if err := proto.Unmarshal(msgBytes, &env); err != nil {
			if !closing {
				c.terminateConnectionWithError("Failed to parse message from TEE_T", err)
				return
			}
			break
		}

		switch p := env.Payload.(type) {
		case *teeproto.Envelope_EncryptedData:
			c.handleEncryptedData(env.GetSessionId(), p.EncryptedData)
		case *teeproto.Envelope_TeetReady:
			c.handleTEETReady(env.GetSessionId(), p.TeetReady)
		case *teeproto.Envelope_RedactionVerification:
			msg := &shared.Message{Type: shared.MsgRedactionVerification, SessionID: env.GetSessionId(), Data: shared.RedactionVerificationData{Success: p.RedactionVerification.GetSuccess(), Message: p.RedactionVerification.GetMessage()}, Timestamp: time.UnixMilli(env.GetTimestampMs())}
			c.handleRedactionVerification(msg)
		case *teeproto.Envelope_SignedMessage:
			// Handle SignedMessage from TEE_T (T_OUTPUT)
			sm := p.SignedMessage
			if sm == nil {
				break
			}
			if sm.GetBodyType() == teeproto.BodyType_BODY_TYPE_T_OUTPUT {
				// Store the original SignedMessage for verification bundle
				c.teetSignedMessage = sm

				var body teeproto.TOutputPayload
				if err := proto.Unmarshal(sm.GetBody(), &body); err != nil {
					c.logger.Error("Failed to unmarshal TOutputPayload", zap.Error(err))
					break
				}
				st := shared.SignedTranscript{
					Packets:   body.GetPackets(),
					Signature: sm.GetSignature(),
					PublicKey: sm.GetPublicKey(),
				}
				c.processSignedTranscriptData(&st)
			}
		case *teeproto.Envelope_AttestationResponse:
			ar := p.AttestationResponse
			msg := &shared.Message{Type: shared.MsgAttestationResponse, SessionID: env.GetSessionId(), Data: shared.AttestationResponseData{AttestationDoc: ar.GetAttestationDoc(), Success: ar.GetSuccess(), ErrorMessage: ar.GetErrorMessage(), Source: ar.GetSource()}, Timestamp: time.UnixMilli(env.GetTimestampMs())}
			c.handleAttestationResponse(msg)
		case *teeproto.Envelope_Error:
			msg := &shared.Message{Type: shared.MsgError, SessionID: env.GetSessionId(), Data: shared.ErrorData{Message: p.Error.GetMessage()}, Timestamp: time.UnixMilli(env.GetTimestampMs())}
			c.handleTEETError(msg)
		default:
			if !closing {
				c.logger.Error("Unknown TEE_T message payload")
			}
		}
	}
}

// sendMessage sends a message to TEE_K
func (c *Client) sendMessage(msg *shared.Message) error {
	conn := c.wsConn

	if conn == nil {
		return fmt.Errorf("no websocket connection")
	}

	// Add session ID if available and not already set
	if c.sessionID != "" && msg.SessionID == "" {
		msg.SessionID = c.sessionID
	}

	// Build protobuf envelope directly
	env := &teeproto.Envelope{SessionId: msg.SessionID, TimestampMs: time.Now().UnixMilli()}
	switch msg.Type {
	case shared.MsgRequestConnection:
		if d, ok := msg.Data.(shared.RequestConnectionData); ok {
			env.Payload = &teeproto.Envelope_RequestConnection{RequestConnection: &teeproto.RequestConnection{
				Hostname:         d.Hostname,
				Port:             int32(d.Port),
				Sni:              d.SNI,
				Alpn:             d.ALPN,
				ForceTlsVersion:  d.ForceTLSVersion,
				ForceCipherSuite: d.ForceCipherSuite,
			}}
		}
	case shared.MsgTCPReady:
		if d, ok := msg.Data.(shared.TCPReadyData); ok {
			env.Payload = &teeproto.Envelope_TcpReady{TcpReady: &teeproto.TCPReady{Success: d.Success}}
		}
	case shared.MsgTCPData, shared.MsgSendTCPData:
		if d, ok := msg.Data.(shared.TCPData); ok {
			env.Payload = &teeproto.Envelope_TcpData{TcpData: &teeproto.TCPData{Data: d.Data}}
		}
	case shared.MsgRedactedRequest:
		if d, ok := msg.Data.(shared.RedactedRequestData); ok {
			// Convert ranges
			ranges := make([]*teeproto.RequestRedactionRange, 0, len(d.RedactionRanges))
			for _, r := range d.RedactionRanges {
				ranges = append(ranges, &teeproto.RequestRedactionRange{Start: int32(r.Start), Length: int32(r.Length), Type: r.Type, RedactionBytes: r.RedactionBytes})
			}
			env.Payload = &teeproto.Envelope_RedactedRequest{RedactedRequest: &teeproto.RedactedRequest{
				RedactedRequest: d.RedactedRequest,
				Commitments:     d.Commitments,
				RedactionRanges: ranges,
			}}
		}
	case shared.MsgError:
		if d, ok := msg.Data.(shared.ErrorData); ok {
			env.Payload = &teeproto.Envelope_Error{Error: &teeproto.ErrorData{Message: d.Message}}
		}
	case shared.MsgAttestationRequest:
		env.Payload = &teeproto.Envelope_AttestationRequest{AttestationRequest: &teeproto.AttestationRequestData{}}
	default:
		// Unknown/unsupported send type
	}

	data, err := proto.Marshal(env)
	if err != nil {
		return err
	}
	return conn.WriteMessage(websocket.BinaryMessage, data)
}

// sendEnvelope sends a protobuf envelope directly to TEE_K
func (c *Client) sendEnvelope(env *teeproto.Envelope) error {
	conn := c.wsConn
	if conn == nil {
		return fmt.Errorf("no websocket connection")
	}

	// Add session ID if available and not already set
	if c.sessionID != "" && env.GetSessionId() == "" {
		env.SessionId = c.sessionID
	}

	data, err := proto.Marshal(env)
	if err != nil {
		return err
	}
	return conn.WriteMessage(websocket.BinaryMessage, data)
}

// isEnclaveMode checks if the client is running in enclave mode
func (c *Client) isEnclaveMode() bool {
	return c.clientMode == ModeEnclave
}

// sendMessageToTEET sends a message to TEE_T
func (c *Client) sendMessageToTEET(msg *shared.Message) error {
	conn := c.teetConn

	if conn == nil {

		return fmt.Errorf("no TEE_T websocket connection")
	}

	// Add session ID if available and not already set
	if c.sessionID != "" && msg.SessionID == "" {
		msg.SessionID = c.sessionID
	}

	env := &teeproto.Envelope{SessionId: msg.SessionID, TimestampMs: time.Now().UnixMilli()}
	switch msg.Type {
	case shared.MsgRedactionStreams:
		if d, ok := msg.Data.(shared.RedactionStreamsData); ok {
			env.Payload = &teeproto.Envelope_RedactionStreams{RedactionStreams: &teeproto.RedactionStreams{Streams: d.Streams, CommitmentKeys: d.CommitmentKeys}}
		}
	case shared.MsgEncryptedResponse:
		if d, ok := msg.Data.(shared.EncryptedResponseData); ok {
			env.Payload = &teeproto.Envelope_EncryptedResponse{EncryptedResponse: &teeproto.EncryptedResponseData{EncryptedData: d.EncryptedData, Tag: d.Tag, RecordHeader: d.RecordHeader, SeqNum: d.SeqNum, CipherSuite: uint32(d.CipherSuite), ExplicitIv: d.ExplicitIV}}
		}
	case shared.MsgBatchedEncryptedResponses:
		if d, ok := msg.Data.(shared.BatchedEncryptedResponseData); ok {
			arr := make([]*teeproto.EncryptedResponseData, 0, len(d.Responses))
			for _, r := range d.Responses {
				arr = append(arr, &teeproto.EncryptedResponseData{EncryptedData: r.EncryptedData, Tag: r.Tag, RecordHeader: r.RecordHeader, SeqNum: r.SeqNum, CipherSuite: uint32(r.CipherSuite), ExplicitIv: r.ExplicitIV})
			}
			env.Payload = &teeproto.Envelope_BatchedEncryptedResponses{BatchedEncryptedResponses: &teeproto.BatchedEncryptedResponses{Responses: arr, SessionId: d.SessionID, TotalCount: int32(d.TotalCount)}}
		}
	case shared.MsgAttestationRequest:
		env.Payload = &teeproto.Envelope_AttestationRequest{AttestationRequest: &teeproto.AttestationRequestData{}}
	case shared.MsgError:
		if d, ok := msg.Data.(shared.ErrorData); ok {
			env.Payload = &teeproto.Envelope_Error{Error: &teeproto.ErrorData{Message: d.Message}}
		}
	default:
		// Unknown/unsupported type for TEET send
	}

	data, err := proto.Marshal(env)
	if err != nil {
		return err
	}
	if err := conn.WriteMessage(websocket.BinaryMessage, data); err != nil {
		return err
	}
	return nil
}

// sendEnvelopeToTEET sends a protobuf envelope directly to TEE_T
func (c *Client) sendEnvelopeToTEET(env *teeproto.Envelope) error {
	conn := c.teetConn
	if conn == nil {
		return fmt.Errorf("no TEE_T websocket connection")
	}

	// Add session ID if available and not already set
	if c.sessionID != "" && env.GetSessionId() == "" {
		env.SessionId = c.sessionID
	}

	data, err := proto.Marshal(env)
	if err != nil {
		return err
	}
	if err := conn.WriteMessage(websocket.BinaryMessage, data); err != nil {
		return err
	}
	return nil
}

// sendError sends an error message to TEE_K (fail-fast implementation)
func (c *Client) sendError(errMsg string) {
	env := &teeproto.Envelope{
		TimestampMs: time.Now().UnixMilli(),
		Payload: &teeproto.Envelope_Error{
			Error: &teeproto.ErrorData{Message: errMsg},
		},
	}

	if err := c.sendEnvelope(env); err != nil {
		c.terminateConnectionWithError("Failed to send error message", err)
		return
	}
}

// sendPendingConnectionRequest sends the stored connection request with the session ID
func (c *Client) sendPendingConnectionRequest() error {
	if !c.connectionRequestPending || c.pendingConnectionRequest == nil {
		return nil
	}

	env := &teeproto.Envelope{
		TimestampMs: time.Now().UnixMilli(),
		Payload: &teeproto.Envelope_RequestConnection{
			RequestConnection: &teeproto.RequestConnection{
				Hostname:         c.pendingConnectionRequest.Hostname,
				Port:             int32(c.pendingConnectionRequest.Port),
				Sni:              c.pendingConnectionRequest.SNI,
				Alpn:             c.pendingConnectionRequest.ALPN,
				ForceTlsVersion:  c.pendingConnectionRequest.ForceTLSVersion,
				ForceCipherSuite: c.pendingConnectionRequest.ForceCipherSuite,
			},
		},
	}

	if err := c.sendEnvelope(env); err != nil {
		return fmt.Errorf("failed to send connection request: %v", err)
	}

	c.connectionRequestPending = false
	c.pendingConnectionRequest = nil
	return nil
}

// handleEncryptedData handles encrypted data from TEE_T
func (c *Client) handleEncryptedData(sessionID string, encData *teeproto.EncryptedDataResponse) {

	if !encData.GetSuccess() {
		c.logger.Error("TEE_T reported failure in encrypted data")
		return
	}

	c.logger.Info("Received encrypted data",
		zap.Int("encrypted_bytes", len(encData.GetEncryptedData())),
		zap.Int("tag_bytes", len(encData.GetAuthTag())))

	c.logger.Info("RECEIVED redaction verification result from TEE_T")

	// Create TLS record with encrypted data and authentication tag
	// Format depends on TLS version and cipher suite
	var payload []byte

	// Check if this is TLS 1.2 AES-GCM (needs explicit IV)
	isTLS12AESGCMCipher := c.handshakeDisclosure != nil &&
		shared.IsTLS12AESGCMCipherSuite(c.handshakeDisclosure.CipherSuite)

	if isTLS12AESGCMCipher {
		// TLS 1.2 AES-GCM: explicit_iv(8) + encrypted_data + auth_tag(16)
		// Explicit IV = sequence number (big-endian, 8 bytes)
		seqNum := uint64(1) // Application data sequence number after handshake
		explicitIV := make([]byte, 8)
		explicitIV[0] = byte(seqNum >> 56)
		explicitIV[1] = byte(seqNum >> 48)
		explicitIV[2] = byte(seqNum >> 40)
		explicitIV[3] = byte(seqNum >> 32)
		explicitIV[4] = byte(seqNum >> 24)
		explicitIV[5] = byte(seqNum >> 16)
		explicitIV[6] = byte(seqNum >> 8)
		explicitIV[7] = byte(seqNum)

		payload = make([]byte, 8+len(encData.GetEncryptedData())+len(encData.GetAuthTag()))
		copy(payload[0:8], explicitIV)
		copy(payload[8:8+len(encData.GetEncryptedData())], encData.GetEncryptedData())
		copy(payload[8+len(encData.GetEncryptedData()):], encData.GetAuthTag())
	} else {
		// TLS 1.3 or ChaCha20: encrypted_data + auth_tag
		payload = make([]byte, len(encData.GetEncryptedData())+len(encData.GetAuthTag()))
		copy(payload, encData.GetEncryptedData())
		copy(payload[len(encData.GetEncryptedData()):], encData.GetAuthTag())
	}

	recordLength := len(payload)
	tlsRecord := make([]byte, 5+recordLength)
	tlsRecord[0] = 0x17                      // ApplicationData record type
	tlsRecord[1] = 0x03                      // TLS version major
	tlsRecord[2] = 0x03                      // TLS version minor
	tlsRecord[3] = byte(recordLength >> 8)   // Length high byte
	tlsRecord[4] = byte(recordLength & 0xFF) // Length low byte
	copy(tlsRecord[5:], payload)             // Complete payload

	c.logger.Info("Sending TLS record", zap.Int("bytes", len(tlsRecord)))

	// TEE_T expects individual TLS records for application data, not raw TCP chunks
	c.capturedTraffic = append(c.capturedTraffic, tlsRecord)
	c.logger.Info("Captured outgoing application data record",
		zap.Int("type", int(tlsRecord[0])),
		zap.Int("bytes", len(tlsRecord)))
	c.logger.Info("Total captured records now", zap.Int("count", len(c.capturedTraffic)))

	// Send to website via TCP connection
	if c.tcpConn != nil {
		n, err := c.tcpConn.Write(tlsRecord)
		if err != nil {
			c.logger.Error("Failed to write to TCP connection", zap.Error(err))
			return
		}
		c.logger.Info("Sent bytes to website", zap.Int("bytes", n))

		// Mark that HTTP request has been sent and we're expecting a response
		c.httpRequestSent = true
		c.httpResponseExpected = true
		c.logger.Info("HTTP request sent, now expecting HTTP response...")

	} else {
		c.logger.Error("No TCP connection available")
	}
}

// validateTranscriptsAgainstCapturedTraffic performs comprehensive validation of signed transcripts

// Close closes all WebSocket connections
func (c *Client) Close() {
	c.isClosing = true

	// This mimics standard HTTP client behavior - close the underlying connection first
	if c.tcpConn != nil {
		c.tcpConn.Close()
		c.tcpConn = nil
	}

	// Close TEE_K connection
	if c.wsConn != nil {
		c.wsConn.WriteMessage(websocket.CloseMessage, websocket.FormatCloseMessage(websocket.CloseNormalClosure, ""))
		c.wsConn.Close()
		c.wsConn = nil
	}

	// Close TEE_T connection
	if c.teetConn != nil {
		c.teetConn.WriteMessage(websocket.CloseMessage, websocket.FormatCloseMessage(websocket.CloseNormalClosure, ""))
		c.teetConn.Close()
		c.teetConn = nil
	}
}

// terminateConnectionWithError performs immediate connection termination due to critical error
// This implements strict fail-fast behavior - no error continuation is allowed
func (c *Client) terminateConnectionWithError(reason string, err error) {
	// Log the critical error
	c.logger.Error("CRITICAL ERROR - terminating connection", zap.String("reason", reason), zap.Error(err))

	// Perform immediate cleanup and termination
	c.Close()

	// Signal completion to prevent hanging
	c.completionOnce.Do(func() {
		close(c.completionChan)
	})
}
